--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,21 @@
 {
     "editor.defaultFormatter": "ms-vscode.cpptools",
-    "workbench.colorTheme": "Visual Studio 2017 Dark - C++"
+    "workbench.colorTheme": "Visual Studio 2017 Dark - C++",
+    "files.associations": {
+        "iostream": "cpp",
+        "ostream": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp",
+        "tuple": "cpp"
+    }
 }
